exchanger/crates/ui/tests/snapshots/snapshots__support_without_contact.snap
---
source: crates/ui/tests/snapshots.rs
expression: "both(p, q)"
---
### plain
--- html
💬 <b>Поддержка</b>
Опишите вопрос одним сообщением и приложите номер заявки — оператор ответит здесь.
Мы никогда не пишем первыми и не просим пароли и PIN от кошельков.
--- keyboard: none

### premium
--- html
<tg-emoji emoji-id="5368000000000000010">💬</tg-emoji> <b>Поддержка</b>
Опишите вопрос одним сообщением и приложите номер заявки — оператор ответит здесь.
Мы никогда не пишем первыми и не просим пароли и PIN от кошельков.
--- keyboard: none
